css/data-creative.css
// div.dropdown-toggle {
//   cursor:pointer;
//   padding:15px 15px;
//   color:#777;
// }

div.page-heading {
  margin-top:2.5em;
  margin-bottom:2em;
}




.footer-right {
  text-align: right;
}

@media(max-width:500px) {
  .footer-right {
    text-align: left;
  }
}

